Add search pokemon and error message

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -26,3 +26,11 @@
 .bg-brown {
     background-color: brown;
 }
+
+.bg-salmon {
+    background-color: salmon;
+}
+
+.margin-l-10 {
+    margin-left: 10px;
+}
